# DTE-DynamicTrainingEngine

./: .gitignore  launch_pretrain_example.txt  pretrain.py  pyproject.toml  readme.md
config/: config_loader.py  config_sudoku.yaml
config/arch/: trm.yaml  trm_config.yaml
config/dataset/: sorting.yaml  sudoku.yaml
config/training/: act.yaml  ema.yaml  optimizer.yaml
config/wandb_config/: wb_sort.yaml
core/: interfaces.py
core/act/: act_container.py  act_model_factory.py  act_model_wrapper.py
core/data/: batch_stream.py  data_module.py  fixed_numpy_dataset.py  online_dataset.py
core/trainer/: api.py  checkpoint.py  ema.py  metric_helper.py  optimization_helper.py  train_state.py  trainer_builder.py  training_context.py
core/utils/: distributed.py  model_summary.py  pytree_auto.py  wandb_utils.py
dte/act/: act_container.py  act_model_factory.py  act_model_wrapper.py
dte/data/: base_dataset_metadata.py  batch.py  batch_stream.py  data_module.py  fixed_numpy_dataset.py  online_dataset.py
dte/trainer/: api.py  checkpoint.py  metric_helper.py  optimization_helper.py  train_state.py  trainer_builder.py  training_context.py  training_schedule.py
dte/utils/: optimizers_utils.py  wandb_utils.py
example/: pretrain.py
example/config/: config.yaml
example/datasets/: sort_generator.py
example/metadata/: numeric_seq_metadata.py  sudoku_metadata.py
example/models/: halting_controller.py  metrics.py  trm.py
user_module/datasets/: sort_generator.py
user_module/metadata/: numeric_seq_metadata.py  sudoku_metadata.py
user_module/models/: criterion.py  (+3 more)
(+8 files in other folders)
